# reacT5

./: .gitignore  .ruff.toml  LICENSE  MANIFEST.in  README.md  mypy.ini  project_specifications.md  project_specifications_llm.md  pyproject.toml  setup.py  specs_pyT5.md
.github/workflows/: ci.yml
docs/: index.md
examples/: assembly_17x17.py  assembly_model.py  pin_cell_model.py  simple_pin_cell.py
examples/notebooks/: quickstart.py
pytrip5/: __init__.py  adapter.py  core.py  io.py  score.py  simulation.py
pytrip5/tests/: __init__.py  test_adapter.py  test_core.py  test_io.py  test_simulation.py
src/pyT5/: __init__.py  cells.py  geometry.py  materials.py  nuclear_data.py  remote.py  results.py  scores.py  simulation.py  source.py  visualization.py
src/pytrip5/: __init__.py  cells.py  core.py  geometry.py  geometry_simple.py  materials.py  nucleardata.py  simulation.py
tests/: __init__.py  conftest.py  test_geometry.py  test_materials.py  test_simulation.py
