[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrip5"
version = "0.1.0"
description = "Python high-level interface for Tripoli-5 enabling full-core PWR modelling and simulations"
readme = "README.md"
authors = [
    {name = "IRSN", email = "contact@irsn.fr"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
keywords = ["tripoli", "tripoli-5", "monte-carlo", "neutronics", "reactor-physics", "PWR"]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
io = [
    "h5py>=3.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupytext>=1.14.0",
    "matplotlib>=3.5.0",
]
all = [
    "pytrip5[dev,io,notebook]",
]

[project.urls]
Homepage = "https://github.com/IRSN/reacT5"
Documentation = "https://github.com/IRSN/reacT5/blob/main/README.md"
Repository = "https://github.com/IRSN/reacT5"
Issues = "https://github.com/IRSN/reacT5/issues"

[tool.setuptools.packages.find]
include = ["pytrip5*"]
exclude = ["pytrip5.tests*"]

[tool.pytest.ini_options]
testpaths = ["pytrip5/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: integration tests requiring Tripoli-5 installation",
    "slow: slow-running tests",
]

[tool.coverage.run]
source = ["pytrip5"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["B", "F401", "F811"]  # allow various test patterns

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "h5py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tripoli5.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
